<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="match_parent"
            android:layout_height="424dp"
            android:layout_gravity="center"
            android:layout_marginTop="-45dp"
            app:srcCompat="@drawable/rectangle1"
            android:alpha="100"/>

        <ImageView
            android:id="@+id/logo3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logo_ourrecipes3" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/signupCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-200dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="379dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteY="286dp">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                android:backgroundTint="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="SIGN UP"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/fillForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="8dp"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prompt_email"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:layout_below="@+id/name"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:layout_below="@+id/email"/>

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="8dp"
                    android:hint="Confirm password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:layout_below="@id/password"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fillForm"
                android:layout_marginTop="30dp">
                <Button
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="300dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="#1C68F6"
                    android:enabled="true"
                    android:text="Sign Up"
                    app:useMaterialThemeColors="false" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/signuptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="Have an account?" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/signuptext"
                    android:backgroundTint="@color/white"
                    android:stateListAnimator="@null"
                    android:text="Sign In"
                    android:textColor="#1C68F6"
                    android:textSize="15sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>