<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountPage.LoginPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="match_parent"
            android:layout_height="424dp"
            android:layout_gravity="center"
            android:layout_marginTop="-45dp"
            android:alpha="100"
            app:srcCompat="@drawable/rectangle1" />

        <ImageView
            android:id="@+id/logo3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/logo_ourrecipes3" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-155dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="379dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteY="286dp">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:backgroundTint="@color/white"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="SIGN IN"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="50dp"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="140dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginBottom="50dp"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <Button
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="160dp"
                android:layout_marginRight="27dp"
                android:backgroundTint="@color/white"
                android:stateListAnimator="@null"
                android:text="Forget Password?"
                android:textColor="#1C68F6"
                android:textSize="12sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="250dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="64dp"
                android:backgroundTint="#1C68F6"
                android:enabled="true"
                android:text="@string/action_sign_in_short"
                app:useMaterialThemeColors="false" />

            <ImageButton
                android:id="@+id/facebookIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="110dp"
                android:background="@null"
                android:src="@drawable/icon_facebook"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/googleIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="110dp"
                android:background="@null"
                android:src="@drawable/icon_google"
                tools:ignore="SpeakableTextPresentCheck" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/signuptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="New here?" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/signuptext"
                    android:backgroundTint="@color/white"
                    android:stateListAnimator="@null"
                    android:text="Sign Up"
                    android:textColor="#1C68F6"
                    android:textSize="15sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>